--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -7,3 +7,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.container{
+  flex: 1;
+  background-color: white;
+}
+
+.content{
+  padding: 40px;
+}
+
+.list{
+  margin-top: 20px;
+}
