--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -118,11 +118,11 @@
   }
 
   .clair{
-    background-color: #fffef1;
+    background-color: #f7e0ae;
     border-radius: 10px;
   }
 
   .sombre{
-    background-color: darkgrey;
+    background-color: rgb(177, 175, 175);
     border-radius: 10px;
   }
