--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -118,11 +118,11 @@
   }
 
   .clair{
-    background-color: #f7e0ae;
+    background-color: #fffef1;
     border-radius: 10px;
   }
 
-  .sombre{
-    background-color: rgb(177, 175, 175);
+  .beige{
+    background-color: rgb(241, 228, 190);
     border-radius: 10px;
   }
